1.0.1
-----------------
Fix issue : Content creation with non-default language - http://bit.ly/9iNxyb

1.0
-----------------
Initial release